# zksnark-java-sdk

./: .gitmodules
cpp/: CMakeLists.txt
cpp/src/: LibarkworksJNIImpl.cpp
rust/libarkworks/: Cargo.toml
rust/libarkworks/include/: libarkworks.h
rust/libarkworks/src/: bn254.rs  lib.rs  serialize.rs  utils.rs
src/main/java/org/tron/common/zksnark/: Libarkworks.java  LibarkworksWrapper.java
src/test/java/org/tron/common/zksnark/: LibarkworksTest.java
