[package]
name = "libarkworks"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkworks"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
#jni = "0.21.1"
libc = "0.2"
rand = "0.8.5"
#bytemuck = "1.13.1"
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
